--- a/fe/src/app/booking/calendar-dialog/calendar-dialog.html
+++ b/fe/src/app/booking/calendar-dialog/calendar-dialog.html
@@ -43,7 +43,7 @@
               <p class="showTime title_note" *ngIf="true">* Thông tin lịch định kỳ (ngày bắt đầu dịch vụ):</p>
               <div>{{
                 datePickerShow
-                }}<span *ngIf="pickServiceType != 1"> - {{scheduleDescription}}</span> </div>
+                }}<span *ngIf="true"> {{scheduleDescription}}</span> </div>
               <div *ngIf="scheduleTimeDescription">{{
                 scheduleTimeDescription
                 }}</div>
