--- a/fe/src/app/template/term-and-conditions/term-and-conditions.component.html
+++ b/fe/src/app/template/term-and-conditions/term-and-conditions.component.html
@@ -115,7 +115,7 @@
       </ol>
     </li>
     <li>
-      <strong>Giảng viên</strong>
+      <strong>Nhân viên</strong>
       <ol class="ol-1">
         <li>100% giảng viên nước ngoài. Mỗi lớp có 1 trợ giảng người Việt.</li>
         <li>
@@ -125,7 +125,7 @@
       </ol>
     </li>
     <li>
-      <strong>Đổi lớp học</strong>
+      <strong>Đổi và chỉnh sửa dịch vụ đã đặt</strong>
       <ol class="ol-1">
         <li>
           Học viên có thể sẽ được đổi lớp cao hoặc thấp hơn lớp đang học theo
