--- a/fe/src/app/booking/booking.component.scss
+++ b/fe/src/app/booking/booking.component.scss
@@ -8,6 +8,14 @@
   width: 30%;
 }
 
+.input-group .account_input {
+  height: 35px !important;
+  width: 30%;
+  .account_{
+    width: 100%;
+  }
+}
+
 .input-group p {
   padding-top: 5px;
   padding-right: 15px;
@@ -382,6 +390,7 @@ span i {
 .error {
   font-size: 11px;
   color: #FF0000;
+  margin-top: 0.5rem;
   // margin-bottom: 15px;
   float: left;
   width: 100%;
