--- a/fe/src/app/booking/cleaner-rate-dialog/cleaner-rate-dialog.html
+++ b/fe/src/app/booking/cleaner-rate-dialog/cleaner-rate-dialog.html
@@ -2,25 +2,39 @@
   <div class="dialog-container">
     <div class="header-background"></div>
     <div class="header">
-      <h6>Bảng thông tin đánh giá & phản hồi về </h6>
+      <h6>Nhận xét & đánh giá dịch vụ </h6>
     </div>
 
-    <!-- <div class="content row">
+    <div class="content row">
       <div class="content-scroll">
-        <div class="title_note"> Danh sách nhân viên trực thuộc Cơ sở Phạm Văn Bạch  </div>
-        <div class="note">*Lưu ý: Danh sách được tổng hợp dựa trên tiêu chí đánh giá và số năng kinh nghiệm</div>
-        <div class="cleaner" *ngFor="let item of listCleaner; let i = index">
-          <div class="cleaner_title"><img src="assets/img/cleaner/{{item.image}}" ></div><div><p>{{item.name}}</p> <p>{{item.gender}}</p> <p>{{item.age}}</p></div>
-          <div class="cleaner_rating"> {{item.rate}} </div>
-          <div class="totle_rate"> ({{ item.total_rate }})
-          </div>
-          <div class="totle_pick"> Lượt được chọn: {{ item.total_pick }}
-          </div>
-          <hr class="hr_select_info_dialog">
-          <button mat-button class="detail_btn" (click)="cleanerRateDetail(item.id)"></button>
-        </div>
+        <div class="title_note"> </div>
+        <div class="note">Đánh giá chất lượng dịch vụ HMS</div>
+        <mat-tab-group>
+          <mat-tab *ngFor="let cleanerGroup of groupedCleaners; let i = index">
+            <ng-template mat-tab-label>
+              Nhân viên {{ i + 1 }}
+            </ng-template>
+        
+            <div class="cleaner" *ngFor="let item of cleanerGroup; let j = index">
+              <div class="cleaner_title"><img src="assets/img/cleaner/{{item.image}}"></div>
+              <div>
+                <p>{{item.name}}</p>
+                <p>{{item.gender}}</p>
+                <p>{{item.age}}</p>
+              </div>
+              <div class="cleaner_rating"> {{item.rate}} </div>
+              <div class="totle_rate"> ({{ item.total_rate }})
+              </div>
+              <div class="totle_pick"> Lượt được chọn: {{ item.total_pick }}
+              </div>
+              <hr class="hr_select_info_dialog">
+              <!-- Thêm textarea và các thành phần khác mà bạn muốn -->
+            </div>
+          </mat-tab>
+        </mat-tab-group>
       </div>
-    </div> -->
-    <!-- <button mat-button class="button" (click)="onNoClick()"><img src="./assets/img/x-dialog.svg" /></button> -->
+      <button mat-button class="detail_btn" (click)="submitReview()"></button>
+    </div>
+    <button mat-button class="button" (click)="onNoClick()"><img src="./assets/img/x-dialog.svg" /></button>
   </div>
 </div>
