--- a/fe/src/app/customer/customer-booking/customer-booking-history/customer-history.component.html
+++ b/fe/src/app/customer/customer-booking/customer-booking-history/customer-history.component.html
@@ -41,7 +41,7 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header border-0">
-          <h3 class="mb-0 font20">Danh sách nhân viên dọn dẹp</h3>
+          <h3 class="mb-0 font20">Danh sách đơn dịch vụ đã sử dụng</h3>
         </div>
         <div class="table-responsive">
           <table class="table align-items-center table-flush">
