--- a/fe/src/app/customer/customer-booking/customer-booking-list/customer-schedule.component.html
+++ b/fe/src/app/customer/customer-booking/customer-booking-list/customer-schedule.component.html
@@ -37,14 +37,62 @@
         <div class="card-header border-0">
           <h3 class="mb-0 font20">Danh sách đơn dịch vụ:</h3>
         </div>
-       
-        <div class="table-responsive" style="margin-top: 2rem;">
+        <div class="table-responsive">
+          <table class="table align-items-center table-flush">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col" >Tên đơn dịch vụ</th>
+                <th scope="col">Ngày làm</th>
+                <th scope="col">Loại nhà</th>
+                <th scope="col">Số tầng</th>
+                <th scope="col">Diện tích</th>
+                <!-- <th scope="col"></th> -->
+                <!-- <th scope="col">Phản hồi</th> -->
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let service of data" style="cursor: pointer;" (click)="viewDetailinSchedule(service.id)">
+                <th scope="row">
+                  <div class="media align-items-center">
+                    <div class="media-body">
+                      <span class="mb-0 text-sm">{{service.id}} - {{service.hostName}}</span>
+                    </div>
+                  </div>
+                </th>
+                <td>
+                  {{service.createDate}}
+                </td>
+                <td>
+                  {{service.houseType}}
+                </td>
+                <td>
+                  {{service.floorNumber}}
+                </td>
+                <td>
+                  {{service.floorArea}}
+                </td>
+                <!-- <td>
+                  <div class="icon-container">
+                    <div class="icon" (click)="editSchedule(service.bookingId)">
+                      <i class="fas fa-edit"></i>
+                    </div>
+                    <div class="divider">|</div>
+                    <div class="icon" (click)="viewDetailinSchedule(service.bookingId)">
+                      <i class="fas fa-info-circle"></i>
+                    </div>
+                  </div>                  
+                </td> -->
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <!-- <div class="table-responsive" style="margin-top: 2rem;">
           <div class="showtime-bydate" *ngFor="let date of dateList">
             <span> - {{date.name}}: ({{date.startTime}} - {{date.endTime}}): </span>
             <span style="font-weight: 700; font-size: 16px"> {{date.workDate}} </span>
             <u (click)="viewDetailinSchedule(date.id, date.workDate)"> (Xem chi tiết)</u>
           </div>
-        </div>
+        </div> -->
        
       </div>
     </div>
