--- a/fe/src/app/employee/schedule/booking-detail-dialog/booking-detail-dialog.html
+++ b/fe/src/app/employee/schedule/booking-detail-dialog/booking-detail-dialog.html
@@ -6,34 +6,76 @@
     </div>
     <div class="content">
       <div class="content-scroll">
-        <div class="title_note"> *Mã đơn hàng <b>#S{{id}}</b></div>
-        <div class="booking-detail-information">
-          <div class="host-information">
-            <i> - Thông tin dịch vụ: </i>
-            <p> Tên khách hàng:<span>
-                {{detail.hostName}}
-              </span></p>
-            <p> SĐT khách hàng: <span>
-                {{detail.hostPhone}}
-              </span></p>
-            <p> Địa chỉ dọn: <span>
-                {{detail.hostAddress}}
-              </span></p>
-            <p> Loại nhà: <span>
-                {{detail.houseType}}
-              </span></p>
-            <p> Số tầng dọn / tổng diện tích dọn: <span>
-                {{detail.floorNumber}} - {{detail.floorArea}}m2
-              </span></p>
-            <p> Loại định kỳ: <span>
-                {{detail.serviceTypeName}} - {{detail.servicePackageName}}
-              </span></p>
-            <p> Tổng số ngày dọn: <span>
-                {{detail.totalBookingDate}}
-              </span></p>
+        <div class="title_note"> *Vui lòng xác nhận lại thông tin đơn hàng bao gồm thông tin cá nhân và dịch vụ</div>
+        <div class="title_note rednoti"> Dịch vụ bổ sung không được tính phí vào đơn dịch vụ, phí sẽ được bổ sung sau
+          khi người dọn xác nhận và thông báo lại</div>
+        <div class="information">
+          <div class="infor-col1">
+            <h6 class="text-primary text-uppercase resize">Thông tin người dùng</h6>
+            <div class="input-group">
+              <p style="width: 90%; display: block;">
+                Tên chủ nhà(*): {{infor.hostName}}
+              </p>
+              <p style="width: 90%; display: block;">Số điện thoại(*): {{infor.hostPhone}}</p>
+            </div>
+            <!-- <h6 *ngIf="billDay" class="text-primary text-uppercase resize">Tiện ích bổ sung</h6>
+            <p class="listAdvanceService" style="padding-top: 1rem;" *ngIf="billDay">* Danh sách tiện ích đã đăng
+              ký: <span style="font-weight: 700; font-size: 15px; color: darkred;">{{
+                textListAdvanceService
+                }}</span></p> -->
+            <!-- <h6 class="text-primary text-uppercase resize">Thời gian<span *ngIf="billDay">(dịch vụ theo ngày) </span>
+              <span *ngIf="billSchedule">(dịch vụ định kỳ) </span>:
+            </h6> -->
+            <div class="date-pickertime">
+              <p class="" style="padding-bottom: 0; margin-bottom: 0;">*
+                Lịch ngày dọn: <span>{{
+                  infor.createDate
+                  }}</span></p>
+            </div>
+            <!-- <div class="input-group">
+              <div class="input-group">
+                <p>Giờ bắt đầu(*): {{startTime}}</p>
+              </div>
+            </div> -->
+            <h6 class="text-primary text-uppercase resize">Phương thức thanh toán </h6>
+            <p style="font-size: 1rem;
+          font-weight: 300;
+          line-height: 1.7;
+          color: #000000de;
+          text-transform: lowercase;">
+              Thanh toán bằng tiền mặt
+            </p>
           </div>
+          <div class="infor-col2">
+            <h6 class="text-primary text-uppercase resize">Thông tin nhà/khu vực vệ sinh</h6>
+            <div class="input-group">
+              <p>Loại hình nhà(*): {{infor.houseType}}</p>
+            </div>
+            <div class="input-group">
+              <p>Địa chỉ nơi dọn: {{infor.hostAddress}}</p>
+            </div>
+            <div class="input-group">
+              <p style="width: 90%; display: block;">Số tầng(*): {{infor.floorNumber}}</p>
+              <p style="width: 90%; display: block;">Diện tích
+                sàn(*): {{infor.floorArea}}</p>
+              <p class="description">Số lượng người dọn và giá (ước tính): <span>
+                  <b>{{cleanerNum}} người dọn dẹp</b> trong
+                  thời gian <b> {{duration}} tiếng </b> (giá dịch vụ: <b>{{formattedPrice}}</b>)
+                </span> </p>
+            </div>
+            <!-- <h6 class="text-primary text-uppercase resize">Nhân viên dọn dẹp </h6>
+            <p style="font-size: 1rem;
+              font-weight: 300;
+              line-height: 1.7;
+              color: #000000de;
+              text-transform: lowercase;">
+              {{cleanerList}}
+            </p> -->
+          </div>
+
+        </div>
           <hr>
-          <div class="serviceType">
+          <!-- <div class="serviceType">
             - Thông tin định kỳ của ngày <b> {{scheduleDay.workDate}} ( {{scheduleDay.startTime}} -
               {{scheduleDay.endTime}} )</b> :
             <p>Trạng thái: {{scheduleDay.status}}</p>
@@ -62,7 +104,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- <div class="table-responsive" style="margin-top: 2rem;">
           <div class="showtime-bydate" *ngFor="let date of dateList">
             <span> - {{date.name}}: ({{date.startTime}} - {{date.endTime}}): </span>
