--- a/fe/src/app/employee/schedule/booking-detail-dialog/booking-detail-dialog.scss
+++ b/fe/src/app/employee/schedule/booking-detail-dialog/booking-detail-dialog.scss
@@ -1597,7 +1597,7 @@
 ::ng-deep .view-detail mat-dialog-container {
   padding: 0 !important;
   overflow-x: visible !important;
-  overflow-y: visible !important;
+  // overflow-y: visible !important;
   min-height: 385px !important;
   background: none !important;
   box-shadow: none !important;
@@ -1868,4 +1868,60 @@ h6 {
 hr {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+
+
+.input-group input {
+  height: 35px !important;
+  width: 20%;
+}
+
+.input-group p {
+  padding-top: 5px;
+  padding-right: 15px;
+  // width: 15%;
+  margin-bottom: 5px;
+}
+
+.takenote {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+h6 {
+  margin-top: 0.5rem;
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.rednoti{
+  font-size: 12.5px;
+  color: rgb(203, 13, 13);
+  margin-bottom: 0.5rem;
+}
+
+.title_note{
+  font-weight: 700;
+}
+
+.resize{
+  font-size: 18px;
+  padding: 0 !important;
+}
+
+.information{
+  display: flex;
+  width: 100%;
+  .infor-col1{
+    width: 50%;
+    display: inline;
+    float: left;
+    margin-right: 1rem;
+  }
+  .infor-col2{
+    width: 50%;
+    display: inline;
+  }
 }
