--- a/fe/src/app/employee/schedule/schedule.component.html
+++ b/fe/src/app/employee/schedule/schedule.component.html
@@ -34,15 +34,16 @@
   <!-- Table -->
   <div class="row">
     <div class="col">
-      <div class="card shadow">
+      <div class="card shadow" *ngIf="listBookingSchedule.length > 0 ">
         <div class="card-header border-0">
           <h3 class="mb-0 font20">Danh sách đơn dịch vụ định kỳ:</h3>
         </div>
-        <div class="table-responsive">
+        <div class="table-responsive" style="min-height: 300px;">
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
               <tr>
                 <th scope="col">Mã đơn</th>
+                <th scope="col">Ngày dọn đầu</th>
                 <th scope="col">Tên người thuê</th>
                 <th scope="col">Số điện thoại</th>
                 <th scope="col">Địa chỉ</th>
@@ -52,14 +53,17 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let booking of bookingList">
+              <tr *ngFor="let booking of listBookingSchedule">
                 <th scope="row">
                   <div class="media align-items-center">
                     <div class="media-body">
-                      <span class="mb-0 text-sm">{{booking.id}}</span>
+                      <span class="mb-0 text-sm">{{booking.bookingId}}</span>
                     </div>
                   </div>
                 </th>
+                <td>
+                  {{booking.scheduleList[0].workDate}}
+                </td>
                 <td>
                   {{booking.hostName}}
                 </td>
@@ -74,61 +78,44 @@
                 </td>
                 <td>
                   {{booking.status}}
+                  <!-- {{(booking.serviceTypeName && booking.servicePackageName) ? "Dịch vụ đinh "}} -->
                 </td>
                 <td class="text-center">
-                  <div>
-                    <a class="dropdown-item"
-                      (click)="showDetail(booking.id, booking.reivew, booking.note, booking.name)">Xem thông
-                      tin</a>
+                  <div ngbDropdown placement="bottom-right">
+                    <a class="btn btn-sm btn-icon-only text-light" ngbDropdownToggle>
+                      <i class="fas fa-ellipsis-v"></i>
+                    </a>
+                    <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
+                      <a class="dropdown-item" (click)="showDetail(booking, 'schedule')">Xem thông tin</a>
+                      <!-- <a class="dropdown-item" (click)="changeStatus(booking.bookingId)">Hoàn thành</a> -->
+                      <a class="dropdown-item" (click)="changeStatus(booking.bookingId)">Xác nhận đơn</a>
+                      <!-- <a class="dropdown-item" (click)="changeStatus()">Xác nhận đơn</a> -->
+                      <a class="dropdown-item" (click)="cancel(booking.bookingId)">Hủy đơn</a>
+                    </div>
                   </div>
+                  <!-- <div>
+                    <a class="dropdown-item" (click)="showDetail(booking)">Xem thông
+                      tin</a>
+
+                    <a class="dropdown-item" (click)="showDetail(booking)">Cập nhật đơn</a>
+                  </div> -->
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
-        <!-- <div class="table-responsive">
-          <div class="showtime-options" *ngFor="let date of dateSchedule">
-            <label> - {{date.name}}: <span>({{date.startTime}} - {{date.endTime}})</span></label>
-            <carousel height="87px" cellsToShow="7" *ngIf="date.workDate && date.workDate.length >= 7">
-              <div [ngClass]="{'selected':selectedDate===showtime}" class="carousel-cell"
-                *ngFor="let showtime of date.workDate" (click)="viewDetailinSchedule(date.id, showtime)">
-                <div class="left">{{getDay(showtime)}}</div>
-                <div class="right"><span>/{{getMonth(showtime)}}
-                  </span><span>{{getDateMonth(showtime)}}</span>
-                </div>
-              </div>
-            </carousel>
-
-            <div class="select-date-container" height="87px" cellsToShow="7"
-              *ngIf="date.workDate && date.workDate.length < 7">
-              <div [ngClass]="{'selected':selectedDate===showtime}" class="datetimeBtn"
-                *ngFor="let showtime of date.workDate" (click)="viewDetailinSchedule(date.id, showtime)">
-                <div class="left">{{getDay(showtime)}}</div>
-                <div class="right"><span>/{{getMonth(showtime)}}
-                  </span><span>{{getDateMonth(showtime)}}</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="table-responsive" style="margin-top: 2rem;">
-          <div class="showtime-bydate" *ngFor="let date of dateList">
-            <span> - {{date.name}}: ({{date.startTime}} - {{date.endTime}}): </span>
-            <span style="font-weight: 700; font-size: 16px"> {{date.workDate}} </span>
-            <u (click)="viewDetailinSchedule(date.id, date.workDate)"> (Xem chi tiết)</u>
-          </div>
-        </div> -->
 
       </div>
-      <div class="card shadow" style="margin-top: 5rem;">
+      <div class="card shadow" style="margin-top: 5rem;" *ngIf="listBookingDay.length > 0">
         <div class="card-header border-0">
           <h3 class="mb-0 font20">Danh sách đơn dịch vụ theo ngày:</h3>
         </div>
-        <div class="table-responsive">
+        <div class="table-responsive" style="min-height: 300px;">
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
               <tr>
                 <th scope="col">Mã đơn</th>
+                <th scope="col">Ngày dọn</th>
                 <th scope="col">Tên người thuê</th>
                 <th scope="col">Số điện thoại</th>
                 <th scope="col">Địa chỉ</th>
@@ -138,7 +125,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let booking of bookingList">
+              <tr *ngFor="let booking of bookingListDay">
                 <th scope="row">
                   <div class="media align-items-center">
                     <div class="media-body">
@@ -148,6 +135,9 @@
                 </th>
                 <td>
                   {{booking.hostName}}
+                </td>
+                <td>
+                  {{booking.createDate}}
                 </td>
                 <td>
                   {{booking.hostPhone}}
@@ -162,9 +152,24 @@
                   {{booking.status}}
                 </td>
                 <td class="text-center">
-                  <div>
-                    <a class="dropdown-item" href="/hms/user-profile">Xem thông tin</a>
-                  </div>
+                    <div ngbDropdown placement="bottom-right">
+                      <a class="btn btn-sm btn-icon-only text-light" ngbDropdownToggle>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </a>
+                      <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
+                        <a class="dropdown-item" (click)="showDetail(booking, 'day')">Xem thông tin</a>
+                        <a class="dropdown-item" (click)="complete(booking.bookingId)">Hoàn thành</a>
+                        <a *ngIf="booking.status != 'CONFIRMED'" class="dropdown-item" (click)="changeStatus(booking.bookingId)">Xác nhận đơn</a>
+                        <!-- <a class="dropdown-item" (click)="changeStatus()">Xác nhận đơn</a> -->
+                        <a class="dropdown-item" (click)="cancel(booking.bookingId)">Hủy đơn</a>
+                      </div>
+                    </div>
+                    <!-- <div>
+                      <a class="dropdown-item" (click)="showDetail(booking)">Xem thông
+                        tin</a>
+
+                      <a class="dropdown-item" (click)="showDetail(booking)">Cập nhật đơn</a>
+                    </div> -->
                 </td>
               </tr>
             </tbody>
