--- a/fe/src/app/booking/bill-booking/bill-booking-dialog.html
+++ b/fe/src/app/booking/bill-booking/bill-booking-dialog.html
@@ -55,7 +55,7 @@
               <p>Địa chỉ nơi dọn: {{billDetail.hostAddress}}</p>
             </div>
             <div class="input-group">
-              <p style="width: 90%; display: block;">Số tầng(*): {{billDetail.floorNumber}}</p>
+              <!-- <p style="width: 90%; display: block;">Số tầng(*): {{billDetail.floorNumber}}</p> -->
               <p style="width: 90%; display: block;">Diện tích
                 sàn(*): {{billDetail.floorArea}}</p>
               <p class="description">Số lượng người dọn và giá (ước tính): <span>
