--- a/fe/src/app/employee/history/history.component.html
+++ b/fe/src/app/employee/history/history.component.html
@@ -67,7 +67,7 @@
                 <th scope="col">Tên đơn dịch vụ</th>
                 <th scope="col">Ngày làm</th>
                 <th scope="col">Loại nhà</th>
-                <th scope="col">Số tầng</th>
+                <!-- <th scope="col">Số tầng</th> -->
                 <th scope="col">Diện tích</th>
                 <th scope="col">Loại dịch vụ</th>
                 <th scope="col"></th>
@@ -95,9 +95,9 @@
                 <td>
                   {{service.floorNumber}}
                 </td>
-                <td>
+                <!-- <td>
                   {{service.floorArea}}
-                </td>
+                </td> -->
                 <td>
                   {{service.serviceTypeName && service.servicePackageName ? 'Gói gọn định kỳ' : 'Gói dọn theo ngày' }} 
                 </td>
