--- a/fe/src/app/booking/pick-cleaner-dialog/cleaner-detail-dialog/cleaner-detail-dialog.html
+++ b/fe/src/app/booking/pick-cleaner-dialog/cleaner-detail-dialog/cleaner-detail-dialog.html
@@ -32,7 +32,7 @@
                 <th scope="col">Tên đơn dịch vụ</th>
                 <th scope="col">Ngày làm</th>
                 <th scope="col">Loại nhà</th>
-                <th scope="col">Số tầng</th>
+                <!-- <th scope="col">Số tầng</th> -->
                 <th scope="col">Diện tích</th>
                 <th scope="col">Chất lượng phục vụ</th>
                 <th scope="col">Phản hồi</th>
@@ -57,9 +57,9 @@
                 <td>
                   {{service.floorNumber}}
                 </td>
-                <td>
+                <!-- <td>
                   {{service.floorArea}}
-                </td>
+                </td> -->
                 <td>
                   <div class="d-flex align-items-center">
                     <span class="mr-2">{{service.ratingScore}}</span>
