--- a/fe/src/app/employee/schedule/booking-detail-dialog/booking-detail-dialog.html
+++ b/fe/src/app/employee/schedule/booking-detail-dialog/booking-detail-dialog.html
@@ -9,102 +9,74 @@
         <div class="title_note"> *Vui lòng xác nhận lại thông tin đơn hàng bao gồm thông tin cá nhân và dịch vụ</div>
         <div class="title_note rednoti"> Dịch vụ bổ sung không được tính phí vào đơn dịch vụ, phí sẽ được bổ sung sau
           khi người dọn xác nhận và thông báo lại</div>
-        <div class="information">
-          <div class="infor-col1">
-            <h6 class="text-primary text-uppercase resize">Thông tin người dùng</h6>
-            <div class="input-group">
-              <p style="width: 90%; display: block;">
-                Tên chủ nhà(*): {{infor.hostName}}
-              </p>
-              <p style="width: 90%; display: block;">Số điện thoại(*): {{infor.hostPhone}}</p>
-            </div>
-            <!-- <h6 *ngIf="billDay" class="text-primary text-uppercase resize">Tiện ích bổ sung</h6>
-            <p class="listAdvanceService" style="padding-top: 1rem;" *ngIf="billDay">* Danh sách tiện ích đã đăng
-              ký: <span style="font-weight: 700; font-size: 15px; color: darkred;">{{
-                textListAdvanceService
-                }}</span></p> -->
-            <!-- <h6 class="text-primary text-uppercase resize">Thời gian<span *ngIf="billDay">(dịch vụ theo ngày) </span>
-              <span *ngIf="billSchedule">(dịch vụ định kỳ) </span>:
-            </h6> -->
-            <div class="date-pickertime">
-              <p class="" style="padding-bottom: 0; margin-bottom: 0;">*
-                Lịch ngày dọn: <span>{{
-                  infor.createDate
-                  }}</span></p>
-            </div>
-            <!-- <div class="input-group">
+          <div *ngIf="status == 'DONE'" class="rate">
+            <span *ngIf="status == 'DONE' && !noneRate">Điểm đánh giá dịch vụ: <div class="star-rating" [innerHTML]="generateStarRating(ratingAverage)"></div></span>
+            <div *ngIf="status == 'DONE' && noneRate"><button class="btn btn-primary" style="">Đánh giá</button></div> 
+          </div>
+          <div class="information">
+            <div class="infor-col1">
+              <h6 class="text-primary text-uppercase resize">Thông tin người dùng</h6>
               <div class="input-group">
-                <p>Giờ bắt đầu(*): {{startTime}}</p>
+                <p style="width: 90%; display: block;">
+                  Tên chủ nhà(*): {{infor.hostName}}
+                </p>
+                <p style="width: 90%; display: block;">Số điện thoại(*): {{infor.hostPhone}}</p>
               </div>
-            </div> -->
-            <h6 class="text-primary text-uppercase resize">Phương thức thanh toán </h6>
-            <p style="font-size: 1rem;
-          font-weight: 300;
-          line-height: 1.7;
-          color: #000000de;
-          text-transform: lowercase;">
-              Thanh toán bằng tiền mặt
-            </p>
-          </div>
-          <div class="infor-col2">
-            <h6 class="text-primary text-uppercase resize">Thông tin nhà/khu vực vệ sinh</h6>
-            <div class="input-group">
-              <p>Loại hình nhà(*): {{infor.houseType}}</p>
+              <div class="date-pickertime">
+                <p class="" style="padding-bottom: 0; margin-bottom: 0;">*
+                  Lịch ngày dọn: <span>{{
+                    infor.scheduleList[0].workDate
+                    }} </span></p>
+                <p *ngIf="type == 'schedule'" class="" style="padding-bottom: 0; margin-bottom: 0;">*
+                  Lịch kết thúc: <span>{{
+                    infor.scheduleList[infor.scheduleList.length - 1].workDate
+                    }} </span></p>
+              </div>
+              <div *ngIf="type == 'schedule'" class="input-group">
+                <p>Tổng ngày dọn: {{infor.totalBookingDate}}</p>
+              </div>
+              <h6 class="text-primary text-uppercase resize">Nhân viên dọn dẹp </h6>
+              <p style="font-size: 1rem;
+                font-weight: 300;
+                line-height: 1.7;
+                color: #000000de;
+                text-transform: lowercase;">
+                {{cleanerList}}
+              </p>
+              <p>Tổng người dọn: {{infor.totalBookingCleaner}}</p>
+              <h6 class="text-primary text-uppercase resize">Phương thức thanh toán </h6>
+              <p style="font-size: 1rem;
+            font-weight: 300;
+            line-height: 1.7;
+            color: #000000de;
+            text-transform: lowercase;">
+                Thanh toán bằng tiền mặt
+              </p>
             </div>
-            <div class="input-group">
-              <p>Địa chỉ nơi dọn: {{infor.hostAddress}}</p>
-            </div>
-            <div class="input-group">
-              <p style="width: 90%; display: block;">Số tầng(*): {{infor.floorNumber}}</p>
-              <p style="width: 90%; display: block;">Diện tích
-                sàn(*): {{infor.floorArea}}</p>
-              <p class="description">Số lượng người dọn và giá (ước tính): <span>
-                  <b>{{cleanerNum}} người dọn dẹp</b> trong
-                  thời gian <b> {{duration}} tiếng </b> (giá dịch vụ: <b>{{formattedPrice}}</b>)
-                </span> </p>
-            </div>
-            <!-- <h6 class="text-primary text-uppercase resize">Nhân viên dọn dẹp </h6>
-            <p style="font-size: 1rem;
-              font-weight: 300;
-              line-height: 1.7;
-              color: #000000de;
-              text-transform: lowercase;">
-              {{cleanerList}}
-            </p> -->
-          </div>
-
-        </div>
-          <hr>
-          <!-- <div class="serviceType">
-            - Thông tin định kỳ của ngày <b> {{scheduleDay.workDate}} ( {{scheduleDay.startTime}} -
-              {{scheduleDay.endTime}} )</b> :
-            <p>Trạng thái: {{scheduleDay.status}}</p>
-            <p>Dịch vụ tiện ích bổ sung: {{namesOfScheduleDay}}</p>
-          </div>
-          <div class="table-responsive">
-            <div class="showtime-options">
-              <carousel height="87px" cellsToShow="7" *ngIf="date.workDate && date.workDate.length >= 7">
-                <div [ngClass]="{'selected':selectedDate===showtime}" class="carousel-cell"
-                  *ngFor="let showtime of date.workDate" (click)="viewDetailinSchedule(date.id, showtime)">
-                  <div class="left">{{getDay(showtime)}}</div>
-                  <div class="right"><span>/{{getMonth(showtime)}}
-                    </span><span>{{getDateMonth(showtime)}}</span>
-                  </div>
-                </div>
-              </carousel>
-
-              <div class="select-date-container" height="87px" cellsToShow="7"
-                *ngIf="date.workDate && date.workDate.length < 7">
-                <div [ngClass]="{'selected':selectedDate===showtime}" class="datetimeBtn"
-                  *ngFor="let showtime of date.workDate" (click)="viewDetailinSchedule(date.id, showtime)">
-                  <div class="left">{{getDay(showtime)}}</div>
-                  <div class="right"><span>/{{getMonth(showtime)}}
-                    </span><span>{{getDateMonth(showtime)}}</span>
-                  </div>
-                </div>
+            <div class="infor-col2">
+              <h6 class="text-primary text-uppercase resize">Thông tin nhà/khu vực vệ sinh</h6>
+              <div class="input-group">
+                <p>Loại hình nhà(*): {{infor.houseType}}</p>
+              </div>
+              <div class="input-group">
+                <p>Địa chỉ nơi dọn: {{infor.hostAddress}}</p>
+              </div>
+              <div class="input-group">
+                <!-- <p style="width: 90%; display: block;">Số tầng(*): {{infor.floorNumber}}</p> -->
+                <p style="width: 90%; display: block;"> Tổng diện tích
+                  sàn(*): {{infor.floorArea}}</p>
+                <p class="description">Số lượng người dọn và giá (ước tính): <span>
+                    <b>{{cleanerNum}} người dọn dẹp</b> trong
+                    thời gian <b> {{duration}} tiếng </b> (giá dịch vụ: <b>{{formattedPrice}}</b>)
+                  </span> </p>
               </div>
             </div>
-          </div> -->
+          </div>
+          <h6 class="text-primary text-uppercase resize">Ghi chú</h6>
+          <div class="note-section">
+            <textarea [disabled]="true" style="width: 50%; padding-left: 1rem; padding-top: 0.5rem;" [value]="infor.note ? infor.note :'' " rows="3"
+              placeholder="Nhập ghi chú của bạn cho dịch vụ đăng ký"></textarea>
+          </div>Ư
           <!-- <div class="table-responsive" style="margin-top: 2rem;">
           <div class="showtime-bydate" *ngFor="let date of dateList">
             <span> - {{date.name}}: ({{date.startTime}} - {{date.endTime}}): </span>
@@ -112,6 +84,24 @@
             <u (click)="viewDetailinSchedule(date.id, date.workDate)"> (Xem chi tiết)</u>
           </div>
         </div> -->
+        </div>
+        <div class="button-payment" style="display: flex; width: 100%;">
+          <div class="button-payment" style="display: flex; width: 100%;">
+            <div style="text-align: end; justify-content: center; margin-right: 1rem; width: 100%; padding-top: 10px;">
+              Tổng tiền đơn dịch vụ:
+              {{ formattedPrice }}
+              <button style="height: 35px; font-size: 11px; display: inline; margin-left: 3rem;"
+                class="btn btn-primary btn-pay" (click)="confirm(infor.id)">
+                Xác nhận đơn
+              </button>
+              <button style="height: 35px; font-size: 11px; display: inline;"
+              class="btn btn-danger btn-pay" (click)="cancel(infor.id)">
+              Hủy đơn
+            </button>
+            </div>
+    
+          </div>
+  
         </div>
       </div>
       <button mat-button class="button" (click)="onNoClick()"><img src="./assets/img/x-dialog.svg" /></button>
