--- a/fe/src/app/employee/schedule/schedule.component.html
+++ b/fe/src/app/employee/schedule/schedule.component.html
@@ -124,7 +124,7 @@
                   </div>
                 </th>
                 <td>
-                  {{day.createDate | dateFormat}}
+                  {{day.scheduleList[0].workDate | dateFormat}}
 
                 </td>
                 <td>
