--- a/fe/src/app/employee/schedule/cleaner-booking-detail-dialog/schedule-dialog/schedule.dialog.scss
+++ b/fe/src/app/employee/schedule/cleaner-booking-detail-dialog/schedule-dialog/schedule.dialog.scss
@@ -1468,7 +1468,7 @@
     border: 1px solid #000 !important;
     margin: 32px 12px 32px 0px;
     color: #795200;
-    // padding: 1.4rem;
+    padding: 1rem 0.5rem 0.5rem;
     text-align: center;
 
     &:hover {
@@ -1510,7 +1510,7 @@
       text-align: right;
     }
     .top{
-      font-size: 14px;
+      font-size: 15px;
       font-weight: bold;
     }
     .right {
@@ -1542,6 +1542,7 @@
     margin: 10px 30px 0 30px;
     flex-wrap: wrap;
     // padding: 1.4rem;
+    padding: 1rem 0.5rem 0.5rem;
 
     .datetimeBtn {
       border-radius: 10px;
@@ -1581,7 +1582,7 @@
       }
 
       .top{
-        font-size: 14px;
+        font-size: 15px;
         font-weight: bold;
         height: 63%;
       }
@@ -1629,7 +1630,7 @@
   }
 }
 
-::ng-deep .change-status mat-dialog-container {
+::ng-deep .schedule-stauts mat-dialog-container {
   padding: 0 !important;
   overflow-x: visible !important;
   overflow-y: visible !important;
@@ -1641,7 +1642,7 @@
 
 
 
-::ng-deep .change-status .mat-dialog-actions {
+::ng-deep .schedule-stauts .mat-dialog-actions {
   padding: 0;
 }
 
@@ -1829,7 +1830,7 @@ h6 {
   ::ng-deep .modal-open .cdk-overlay-container {
     display: block;
   } */
-  ::ng-deep .change-status mat-dialog-container {
+  ::ng-deep .schedule-stauts mat-dialog-container {
     min-height: auto !important;
   }
 
@@ -2063,6 +2064,7 @@ img{
 }
 
 .selected {
-  background-color: red;
-  color: white;
+  box-shadow: 1px 1px 1px 1px #ddd !important;
+  background-color: #fce793 !important;
+  color: #795200 !important;
 }
